source_set("unittest") {
  sources = [
    "unittest.cpp",
  ]
  deps = [
    "//third_party:gtest",
    "//third_party:gmock",
    "//src/algorithm:unittest",
    "//src/container:unittest",
    "//src/functional:unittest",
    "//src/iterator:unittest",
    "//src/memory:unittest",
    "//src/utility:unittest",
  ]
}
