source_set("container") {
  sources = [
    "array.hpp",
    "vector.hpp",
  ]
  deps = [
    "//src/algorithm",
    "//src/iterator",
    "//src/utility",
  ]
}

source_set("unittest") {
  sources = [
    "array_unittest.cpp",
    "list_unittest.cpp",
    "priority_queue_unittest.cpp",
    "stack_unittest.cpp",
    "vector_unittest.cpp",
  ]
  deps = [
    "//third_party:gtest",
    "//third_party:gmock",
  ]
}
